<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_reporter_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/reporterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reporter_name"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_reporter_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="5"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_reporter_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="5"
            android:gravity="top"
            android:hint="@string/address"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/mapButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_layout_reporter_address"
        android:layout_below="@+id/input_layout_reporter_address"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/select_form_map"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/typeButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/input_layout_reporter_address"
        android:layout_alignTop="@+id/mapButton"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/technician_type"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@android:color/white" />
</RelativeLayout>

